# QAgents

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.claude/skills/quanted-agents/: SKILL.md
.claude/skills/quanted-agents/evals/: evals.json
.claude/skills/quanted-agents/references/: hierarchical-agents-guide.md  patterns-guide.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.md
examples/: 01_single_agent.py  02_pipeline.py  03_router.py  04_loop.py  05_parallel.py  06_skills_and_feedback.py  07_trace_logging.py  08_hierarchical_agents.py  09_dual_stream.py  10_soft_limits.py  11_tool_middleware.py  12_trace_sessions.py  13_parallel_retry.py
quanted_agents/: __init__.py  _execution.py  _token_counter.py  _usage_limits.py  agent.py  artifact_store.py  context.py  exceptions.py  hierarchical.py  mcp.py  observability.py  recovery.py  restructurer.py  result.py  trace_writer.py  types.py
quanted_agents/workflows/: __init__.py  loop.py  parallel.py  pipeline.py  router.py
scripts/: build.sh
tests/: conftest.py  test_agent_context.py  test_agent_creation.py  test_agent_prompts.py  test_agent_run.py  test_agent_tools.py  test_artifact_store.py  test_assembly.py  test_context.py  test_context_overflow.py  test_execution_hardening.py  test_extract_raw_text.py  test_hierarchical.py  test_integration_hierarchical.py  test_integration_parallel.py  test_integration_pipeline.py  test_loop.py  test_mcp.py  test_mcp_middleware.py  test_nested_workflow_observability.py  test_observability.py  test_parallel.py  test_parallel_retry.py  test_parallel_trace_propagation.py  test_pipeline.py  test_pipeline_transforms.py  test_recovery.py  test_recovery_usage.py  test_restructurer.py  test_router.py  test_soft_limits.py  test_stream_recovery.py  test_summary_capture.py  test_trace_file_workflows.py  test_trace_session.py  test_trace_writer.py  test_wheel_build.py  test_workflow_nesting.py  test_workflow_observability.py
